--- a/ar-activities.html
+++ b/ar-activities.html
@@ -241,7 +241,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='ar-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contact</span>
         </a>
@@ -311,7 +311,7 @@
             <li><a href="#gallery">&nbsp;• الصور</a></li>
             <li><a href="#sports">&nbsp;• الرياضة</a></li>
             <p>____</p>
-            <li><a href="#contact"><span style="color: rgb(253, 93, 7);">اتصل بي</span></a></li>
+            <li><a href="ar-contact.html"><span style="color: rgb(253, 93, 7);">اتصل بي</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -411,7 +411,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• التصوير الفوتوغرافي</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>اتصل بي</strong></small></a><br>
+            <li><a href="ar-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>اتصل
+                    بي</strong></small></a><br>
             </li>
             <hr>
           </ul>
