--- a/ar.html
+++ b/ar.html
@@ -241,7 +241,7 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='#contact'>
+        <a class='slide' href='ar-contact.html'>
           <span class='element'>C</span>
           <span class='name'>Contact</span>
         </a>
@@ -304,7 +304,7 @@
             <li><a href="ar-research.html">الأبحاث</a></li>
             <li><a href="ar-resume.html">السيرة الذاتية</a></li>
             <li><a href="ar-activities.html">الأنشطة</a></li>
-            <li><a href="#contact">اتصل بي</a></li>
+            <li><a href="ar-contact.html">اتصل بي</a></li>
             <p>____</p>
             <li><a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span class='blue'>لينكد
                   إن</span></a></li>
@@ -470,7 +470,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• التصوير الفوتوغرافي</small></a></li>
             </div>
 
-            <li><a href="#contact"><small style="color: rgb(97, 97, 97);">▸ <strong>اتصل بي</strong></small></a><br>
+            <li><a href="ar-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>اتصل
+                    بي</strong></small></a><br>
             </li>
             <hr>
           </ul>
