--- a/cn-contact.html
+++ b/cn-contact.html
@@ -461,16 +461,16 @@
               繁</a></span>&nbsp;<select id="languages" name="languages"
             style="width:62px;display:inline-block;color:inherit;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="cn.html" select>中文</option>
-            <option value="jp.html">日本語</option>
-            <option value="kr.html">한국어</option>
-            <option value="de.html">Deutsch</option>
-            <option value="en.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="cn-contact.html" select>中文</option>
+            <option value="jp-contact.html">日本語</option>
+            <option value="kr-contact.html">한국어</option>
+            <option value="de-contact.html">Deutsch</option>
+            <option value="en-contact.html">English</option>
+            <option value="es-contact.html">Español</option>
+            <option value="fr-contact.html">Français</option>
+            <option value="it-contact.html">Italiano</option>
+            <option value="ru-contact.html">Русский</option>
+            <option value="ar-contact.html">اللغة العربية</option>
           </select>
         </span>
 
@@ -562,17 +562,17 @@
 
           <select id="languages" name="languages"
             style="width:110px;display:inline-block;color:inherit;margin-bottom:0px;" onchange="handleChange(this)">
-            <option value="cn.html" select>🇨🇳 中文(简体)</option>
+            <option value="cn-contact.html" select>🇨🇳 中文(简体)</option>
             <option value="javascript:runFanTiJavaScript();">🇭🇰 中文(繁体)</option>
-            <option value="jp.html">🇯🇵 日本語</option>
-            <option value="kr.html">🇰🇷 한국어</option>
-            <option value="de.html">🇩🇪 Deutsch</option>
-            <option value="en.html">🇬🇧 English</option>
-            <option value="es.html">🇪🇸 Español</option>
-            <option value="fr.html">🇫🇷 Français</option>
-            <option value="it.html">🇮🇹 Italiano</option>
-            <option value="ru.html">🇷🇺 Русский</option>
-            <option value="ar.html">🇸🇦 اللغة العربية</option>
+            <option value="jp-contact.html">🇯🇵 日本語</option>
+            <option value="kr-contact.html">🇰🇷 한국어</option>
+            <option value="de-contact.html">🇩🇪 Deutsch</option>
+            <option value="en-contact.html">🇬🇧 English</option>
+            <option value="es-contact.html">🇪🇸 Español</option>
+            <option value="fr-contact.html">🇫🇷 Français</option>
+            <option value="it-contact.html">🇮🇹 Italiano</option>
+            <option value="ru-contact.html">🇷🇺 Русский</option>
+            <option value="ar-contact.html">🇸🇦 اللغة العربية</option>
           </select>
         </span>
 
