--- a/es-contact.html
+++ b/es-contact.html
@@ -389,16 +389,16 @@
           <select id="languages" name="languages"
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="es.html" select>Español</option>
-            <option value="de.html">Deutsch</option>
-            <option value="en.html">English</option>
-            <option value="fr.html">Français</option>
+            <option value="es-contact.html" select>Español</option>
+            <option value="de-contact.html">Deutsch</option>
+            <option value="en-contact.html">English</option>
+            <option value="fr-contact.html">Français</option>
             <!---<option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
-            <option value="cn.html">中文</option>
-            <option value="jp.html">日本語</option>
-            <option value="kr.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ru-contact.html">Русский</option>
+            <option value="cn-contact.html">中文</option>
+            <option value="jp-contact.html">日本語</option>
+            <option value="kr-contact.html">한국어</option>
+            <option value="ar-contact.html">اللغة العربية</option>
             --->
           </select>
         </span>
@@ -484,16 +484,16 @@
             <select id="languages" name="languages"
               style="width: 100px; color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="es.html" select>🇪🇸 Español</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="fr.html">🇫🇷 Français</option>
+              <option value="es-contact.html" select>🇪🇸 Español</option>
+              <option value="de-contact.html">🇩🇪 Deutsch</option>
+              <option value="en-contact.html">🇬🇧 English</option>
+              <option value="fr-contact.html">🇫🇷 Français</option>
               <!--- <option value="it.html">🇮🇹 Italiano</option>
-              <option value="ru.html">🇷🇺 Русский</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ru-contact.html">🇷🇺 Русский</option>
+              <option value="cn-contact.html">🇨🇳 中文</option>
+              <option value="jp-contact.html">🇯🇵 日本語</option>
+              <option value="kr-contact.html">🇰🇷 한국어</option>
+              <option value="ar-contact.html">🇸🇦 اللغة العربية</option>
             -->
             </select>
           </span>
@@ -513,8 +513,7 @@
           <!-- <li><strong>Tablón de Mensajes</strong>: <a href="es-contact.html"><span
                 class='blue'>scholar.h-xu.com/es-contact</span></a> (Por favor, envíeme un mensaje)<br /></li> -->
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a> (Siéntase libre de contactarme en caso de cualquier
-            colaboración o solicitud!)<br /></li>
+                class='blue'>h.xu [at] tum.de</span></a> (reemplace [at] con @)<br /></li>
           <li><strong>Reunión en línea</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (reunión 1 a 1, por favor reserve con anticipación)
           </li>
