--- a/fr-contact.html
+++ b/fr-contact.html
@@ -401,15 +401,15 @@
             onchange="window.location.href=this.options [this.selectedIndex].value">
             <option value="fr-contact.html" select>Français</option>
             <option value="de-contact.html">Deutsch</option>
-            <option value="en.html">English</option>
-            <option value="es.html">Español</option>
+            <option value="en-contact.html">English</option>
+            <option value="es-contact.html">Español</option>
             <!---
-            <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
-            <option value="cn.html">中文</option>
-            <option value="jp.html">日本語</option>
-            <option value="kr.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="it-contact.html">Italiano</option>
+            <option value="ru-contact.html">Русский</option>
+            <option value="cn-contact.html">中文</option>
+            <option value="jp-contact.html">日本語</option>
+            <option value="kr-contact.html">한국어</option>
+            <option value="ar-contact.html">اللغة العربية</option>
             --->
           </select>
         </span>
@@ -524,8 +524,7 @@
         <ul class="square">
 
           <li><strong>Email</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span
-                class='blue'>h.xu [at] tum.de</span></a> (N'hésitez pas à me contacter pour toute collaboration ou
-            demande!)<br /></li>
+                class='blue'>h.xu [at] tum.de</span></a> (veuillez remplacer [at] par @ )<br /></li>
           <li><strong>Réunion en ligne</strong> : <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (réunion en tête-à-tête, veuillez réserver à
             l'avance)</li>
