--- a/jp-contact.html
+++ b/jp-contact.html
@@ -395,16 +395,16 @@
           <img src="images/flag_jp.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <select id="languages" name="languages" style="width: 85px; color:inherit;display:inline-block;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="jp.html" select>日本語</option>
-            <option value="cn.html">中文</option>
-            <option value="kr.html">한국어</option>
-            <option value="de.html">Deutsch</option>
-            <option value="en.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
-            <option value="ru.html">Русский</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="jp-contact.html" select>日本語</option>
+            <option value="cn-contact.html">中文</option>
+            <option value="kr-contact.html">한국어</option>
+            <option value="de-contact.html">Deutsch</option>
+            <option value="en-contact.html">English</option>
+            <option value="es-contact.html">Español</option>
+            <option value="fr-contact.html">Français</option>
+            <option value="it-contact.html">Italiano</option>
+            <option value="ru-contact.html">Русский</option>
+            <option value="ar-contact.html">اللغة العربية</option>
           </select>
         </span>
 
@@ -491,16 +491,16 @@
         <span style="float:right; font-family:verdana">
           <select id="languages" name="languages" style="width: 90px; color:inherit;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="jp.html" select>🇯🇵 日本語</option>
-            <option value="cn.html">🇨🇳 中文</option>
-            <option value="kr.html">🇰🇷 한국어</option>
-            <option value="de.html">🇩🇪 Deutsch</option>
-            <option value="en.html">🇬🇧 English</option>
-            <option value="es.html">🇪🇸 Español</option>
-            <option value="fr.html">🇫🇷 Français</option>
-            <option value="it.html">🇮🇹 Italiano</option>
-            <option value="ru.html">🇷🇺 Русский</option>
-            <option value="ar.html">🇸🇦 اللغة العربية</option>
+            <option value="jp-contact.html" select>🇯🇵 日本語</option>
+            <option value="cn-contact.html">🇨🇳 中文</option>
+            <option value="kr-contact.html">🇰🇷 한국어</option>
+            <option value="de-contact.html">🇩🇪 Deutsch</option>
+            <option value="en-contact.html">🇬🇧 English</option>
+            <option value="es-contact.html">🇪🇸 Español</option>
+            <option value="fr-contact.html">🇫🇷 Français</option>
+            <option value="it-contact.html">🇮🇹 Italiano</option>
+            <option value="ru-contact.html">🇷🇺 Русский</option>
+            <option value="ar-contact.html">🇸🇦 اللغة العربية</option>
           </select>
         </span>
       </p>
@@ -527,7 +527,7 @@
         <ul class="square">
 
           <li><strong>メール</strong>: <a href="mailto:h.xu@tum.de" target="_blank" target="_blank"><span class='blue'>h.xu
-                [at] tum.de</span></a> (協力、相談、またはメディアインタビューはご連絡ください!)<br /></li>
+                [at] tum.de</span></a> （[at] を @ に置き換えてください）<br /></li>
           <li><strong>オンライン会議</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1対1の会議、事前に予約してください)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
