--- a/ru-contact.html
+++ b/ru-contact.html
@@ -377,16 +377,16 @@
           <select id="languages" name="languages"
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
             onchange="window.location.href=this.options [this.selectedIndex].value">
-            <option value="ru.html" select>Русский</option>
-            <option value="de.html">Deutsch</option>
-            <option value="en.html">English</option>
-            <option value="es.html">Español</option>
-            <option value="fr.html">Français</option>
-            <option value="it.html">Italiano</option>
-            <option value="cn.html">中文</option>
-            <option value="jp.html">日本語</option>
-            <option value="kr.html">한국어</option>
-            <option value="ar.html">اللغة العربية</option>
+            <option value="ru-contact.html" select>Русский</option>
+            <option value="de-contact.html">Deutsch</option>
+            <option value="en-contact.html">English</option>
+            <option value="es-contact.html">Español</option>
+            <option value="fr-contact.html">Français</option>
+            <option value="it-contact.html">Italiano</option>
+            <option value="cn-contact.html">中文</option>
+            <option value="jp-contact.html">日本語</option>
+            <option value="kr-contact.html">한국어</option>
+            <option value="ar-contact.html">اللغة العربية</option>
           </select>
         </span>
       </h3>
@@ -472,16 +472,16 @@
             <select id="languages" name="languages"
               style="width: 100px;color:inherit;display:inline-block;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
-              <option value="ru.html" select>🇷🇺 Русский</option>
-              <option value="de.html">🇩🇪 Deutsch</option>
-              <option value="en.html">🇬🇧 English</option>
-              <option value="es.html">🇪🇸 Español</option>
-              <option value="fr.html">🇫🇷 Français</option>
-              <option value="it.html">🇮🇹 Italiano</option>
-              <option value="cn.html">🇨🇳 中文</option>
-              <option value="jp.html">🇯🇵 日本語</option>
-              <option value="kr.html">🇰🇷 한국어</option>
-              <option value="ar.html">🇸🇦 اللغة العربية</option>
+              <option value="ru-contact.html" select>🇷🇺 Русский</option>
+              <option value="de-contact.html">🇩🇪 Deutsch</option>
+              <option value="en-contact.html">🇬🇧 English</option>
+              <option value="es-contact.html">🇪🇸 Español</option>
+              <option value="fr-contact.html">🇫🇷 Français</option>
+              <option value="it-contact.html">🇮🇹 Italiano</option>
+              <option value="cn-contact.html">🇨🇳 中文</option>
+              <option value="jp-contact.html">🇯🇵 日本語</option>
+              <option value="kr-contact.html">🇰🇷 한국어</option>
+              <option value="ar-contact.html">🇸🇦 اللغة العربية</option>
             </select>
           </span>
         </span>
