--- a/en-research.html
+++ b/en-research.html
@@ -430,7 +430,7 @@
         intelligent transportation, with cross-disciplinary research interests including:
 
       <ul class="square">
-        <li><strong>Renewable Energy</strong>, Hydrogen, Fuel Cells, Eletrolyser, PV, Batteries<br />
+        <li><strong>Renewable Energy</strong>, Hydrogen, Fuel Cells, Electrolyser, Solar/PV, Batteries<br />
         <li><strong>Energy Economy</strong>, Energy Policy, ESG Investing, Digital Sustainability<br />
         <li><strong>Functional Materials</strong>, Semiconductors, Polymers, Metal Oxides<br />
           <!--<li><strong>Computational Imaging</strong>, X-ray Techniques, Computer Vision <br />
