--- a/ar-research.html
+++ b/ar-research.html
@@ -331,7 +331,8 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile" style="text-align: right;">التقدم البحثي<small><small><small></small></small> </small>
+      <h3 class="hidden-mobile" style="text-align: right;">التقدم البحثي<small><small><small> 「العلم بلا حدود」
+            </small></small> </small>
         <span style="float:left;font-family:verdana;">
           <select id="languages" name="languages"
             style="width: 85px; color:inherit;display:inline-block;margin-bottom:0px;"
