--- a/cn-research.html
+++ b/cn-research.html
@@ -416,7 +416,7 @@
             <h3 class="hidden-mobile">
                 <span><ruby>研究进展<rt><text style="color:rgb(255, 255, 255)">Research Progress</text></rt></ruby> <ruby>
                         <rt><text style="color:rgb(255, 255, 255)"></text></rt>
-                    </ruby> <small><small><small> 科研 / 行研</small></small></small>
+                    </ruby> <small><small><small> 「科学无国界」</small></small></small>
 
                 </span>
 
