--- a/kr-research.html
+++ b/kr-research.html
@@ -334,7 +334,7 @@
       <h3 class="hidden-mobile"> <span><ruby>연구 진행<rt><text style="color:rgb(255, 255, 255)">An nyeong</text>
             </rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
-          </ruby><small><small><small></small></small> </small>
+          </ruby><small><small><small> 「국경 없는 과학」</small></small> </small>
 
         </span>
         <span style="float:right;font-family:verdana;margin-top:7px;">
