--- a/ru-research.html
+++ b/ru-research.html
@@ -313,9 +313,8 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Привет! <small><small><small>Добро пожаловать, друзья из <span id="location">всего
-                мира</span>
-              :-)</small></small> </small>
+      <h3 class="hidden-mobile">Прогресс в исследованиях<small><small><small>「Наука без границ」 </small></small>
+        </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_ru.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <select id="languages" name="languages"
