--- a/de-research.html
+++ b/de-research.html
@@ -320,7 +320,8 @@
 
       </div>
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Forschungsfortschritt<small><small><small></small></small> </small>
+      <h3 class="hidden-mobile">Forschungsfortschritt<small><small><small> 「Wissenschaft ohne Grenzen」</small></small>
+        </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_de.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ch.png" alt="flag" style="height:16px;display:inline-block;top:3px;position:relative;">
