--- a/en-research.html
+++ b/en-research.html
@@ -294,7 +294,8 @@
       </div>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Research Progress <small><small><small></small></small> </small>
+      <h3 class="hidden-mobile">Research Progress <small><small><small>「Science without borders」</small></small>
+        </small>
         <span style="float:right;font-family:verdana;">
           <img src="images/flag_us.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_uk.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
