--- a/es-research.html
+++ b/es-research.html
@@ -322,7 +322,8 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Progreso de la investigación<small><small> <small></small></small> </small>
+      <h3 class="hidden-mobile">Progreso de la investigación<small><small> <small> 「Ciencia sin
+              fronteras」</small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_es.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ar.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
