--- a/fr-research.html
+++ b/fr-research.html
@@ -334,7 +334,8 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Progrès de la recherche<small><small><small></small></small> </small>
+      <h3 class="hidden-mobile">Progrès de la recherche<small><small><small>「Science sans frontières」</small></small>
+        </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_fr.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ch.png" alt="flag" style="height:16px;display:inline-block;top:3px;position:relative;">
