--- a/it-research.html
+++ b/it-research.html
@@ -329,7 +329,8 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Progressi della ricerca<small><small> <small></small></small> </small>
+      <h3 class="hidden-mobile">Progressi della ricerca<small><small> <small>「Scienza senza confini」</small></small>
+        </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_it.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
           <img src="images/flag_ch.png" alt="flag" style="height:16px;display:inline-block;top:3px;position:relative;">
