--- a/jp-research.html
+++ b/jp-research.html
@@ -326,7 +326,7 @@
         <span>
           <ruby>研究進捗<rt><text style="color:rgb(255, 255, 255)">Kon‘ ni chi wa！</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
-          </ruby><small><small><small></small></small> </small>
+          </ruby><small><small><small>「科学に国境はない」 </small></small> </small>
         </span>
         <span style="float:right; font-family:verdana;margin-top:10px;">
           <img src="images/flag_jp.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
