--- a/cn-research.html
+++ b/cn-research.html
@@ -709,9 +709,9 @@
                         投稿录用: <text style="color:rgb(36, 82, 197)">[国际可再生能源署] [IRENA International Energy
                             Workshop]</text>
                         <br>
-                        2024 | <em><strong>Policy Research Working Paper</strong></em> [<a href=""
-                            target="_blank">arXiv</a>] <text style="color:rgb(6, 35, 91)"></text><text
-                            style="color:rgb(19, 142, 10)"></text>
+                        2024 | <em><strong>Policy Research Working Paper</strong></em> [<a
+                            href="https://arxiv.org/abs/2408.08874" target="_blank">PDF</a>] <text
+                            style="color:rgb(6, 35, 91)"></text><text style="color:rgb(19, 142, 10)"></text>
                     </li>
                 </ol>
 
