--- a/ar-research.html
+++ b/ar-research.html
@@ -554,6 +554,21 @@
 
       <div class="doc-section" id="publications" style="text-align: right; direction: rtl;">
         <h3>منشورات</h3>
+        <ul class="square">
+          <li><strong>اقتصاد الطاقة / السياسات / الاستراتيجيات: </strong><br>
+        </ul>
+        <ol>
+          <li>
+            <strong>H. Xu*</strong> [ETH]<br>
+            تطوير الهيدروجين في الصين والاتحاد الأوروبي: استراتيجية سباق الخيل الموصى بها لـ "تيان جي"<br>
+            تم القبول للنشر: <text style="color:rgb(36, 82, 197)">[الوكالة الدولية للطاقة المتجددة] [ورشة العمل الدولية
+              للطاقة IRENA]</text>
+            <br>
+            2024 | <em><strong>ورقة عمل بحثية في السياسة</strong></em> [<a href="https://arxiv.org/abs/2408.08874"
+              target="_blank">PDF</a>] <text style="color:rgb(6, 35, 91)"></text><text
+              style="color:rgb(19, 142, 10)"></text>
+          </li>
+        </ol>
 
         <ul class="square">
           <li><strong>تكنولوجيا الطاقة النظيفة / الكيمياء الكهربية</strong></li>
