--- a/jp-research.html
+++ b/jp-research.html
@@ -541,6 +541,25 @@
 
       <div class="doc-section" id="publications">
         <h3>学術論文 <small><small>(引用数: <span id="citation-number-container">300+</span>)</small></small></h3>
+
+        <ul class="square">
+          <li><strong>エネルギー経済 / 政策 / 戦略: </strong><br>
+        </ul>
+        <ol>
+          <li>
+            <strong>H. Xu*</strong> [ETH]<br>
+            Hydrogen Development in China and the EU: A Recommended Tian Ji’s Horse Racing Strategy[W] <br>
+            翻訳: 中国とEUにおける水素開発: 田忌の馬レース戦略の提案<br>
+            採択: <text style="color:rgb(36, 82, 197)">[国際再生可能エネルギー機関] [IRENA International Energy Workshop]</text>
+            <br>
+            2024 | <em><strong>政策研究ワーキングペーパー</strong></em> [<a href="https://arxiv.org/abs/2408.08874"
+              target="_blank">PDF</a>] <text style="color:rgb(6, 35, 91)"></text><text
+              style="color:rgb(19, 142, 10)"></text>
+          </li>
+        </ol>
+
+
+
         <ul class="square">
           <li><strong>新エネルギー技術 / 電気化学</strong></li>
         </ul>
