--- a/kr-research.html
+++ b/kr-research.html
@@ -554,6 +554,25 @@
 
       <div class="doc-section" id="publications">
         <h3>간행물<small><small> (인용: <span id="citation-number-container">300+</span>)</small></small></h3>
+
+        <ul class="square">
+          <li><strong>에너지 경제 / 정책 / 전략: </strong><br>
+        </ul>
+        <ol>
+          <li>
+            <strong>H. Xu*</strong> [ETH]<br>
+            Hydrogen Development in China and the EU: A Recommended Tian Ji’s Horse Racing Strategy [W] <br>
+            번역: 중국과 EU에서의 수소 개발: 천계의 경마 전략 제안<br>
+            투고 채택: <text style="color:rgb(36, 82, 197)">[국제재생에너지기구] [IRENA International Energy Workshop]</text>
+            <br>
+            2024 | <em><strong>정책 연구 작업 문서</strong></em> [<a href="https://arxiv.org/abs/2408.08874"
+              target="_blank">PDF</a>] <text style="color:rgb(6, 35, 91)"></text><text
+              style="color:rgb(19, 142, 10)"></text>
+          </li>
+        </ol>
+
+
+
         <ul class="square">
           <li><strong>청정에너지기술 / 전기화학</strong></li>
         </ul>
