--- a/ru-research.html
+++ b/ru-research.html
@@ -536,6 +536,27 @@
 
       <div class="doc-section" id="publications">
         <h3>Публикации</h3>
+
+
+        <ul class="square">
+          <li><strong>Энергетическая экономика / Политика / Стратегия: </strong><br>
+        </ul>
+        <ol>
+          <li>
+            <strong>H. Xu*</strong> [ETH]<br>
+            Hydrogen Development in China and the EU: A Recommended Tian Ji’s Horse Racing Strategy
+            [W] <br>
+            Перевод: Развитие водорода в Китае и ЕС: Рекомендуемая стратегия "скачек" Тянь Цзи<br>
+            Принято к публикации: <text style="color:rgb(36, 82, 197)">[Международное агентство по возобновляемым
+              источникам энергии] [IRENA International Energy Workshop]</text>
+            <br>
+            2024 | <em><strong>Научно-исследовательский рабочий документ по политике</strong></em> [<a
+              href="https://arxiv.org/abs/2408.08874" target="_blank">PDF</a>] <text
+              style="color:rgb(6, 35, 91)"></text><text style="color:rgb(19, 142, 10)"></text>
+          </li>
+        </ol>
+
+
         <ul class="square">
           <li><strong>Чистая энергетика / электрохимия</strong></li>
         </ul>
