--- a/cn-resume.html
+++ b/cn-resume.html
@@ -712,7 +712,7 @@
         <h3>学术职能</h3>
         <ul class="square">
           <li><strong>国际组织/智库: </strong><br>
-            - <strong>奥地利萨尔茨堡全球研讨会: KFAS-Salzburg</strong>, Fellow/研究员 (KFAS-SGS, 2024-2025)<br>
+            - <strong>萨尔茨堡全球研讨会: KFAS-Salzburg</strong>, Fellow/研究员 (KFAS-SGS, 2024-2025)<br>
             - <strong>联合国波恩气候变化大会: 分会主持人</strong>, 青年代表/演讲人 (UNFCCC, 2023-2024)<br>
             - <strong>联合国欧洲经济委员会: 气候变化与陆上交通</strong> 专家组成员/内部咨询 (UNECE, 2023-2024)<br>
             - <strong>瑞士圣加仑国际经济论坛: </strong> 学术评审 (St. Gallen Symposium, 2023-2024)<br>
