--- a/cn-research.html
+++ b/cn-research.html
@@ -332,7 +332,7 @@
         <div class="twelve columns offset-by-four content">
 
             <div class="image-wrapper hidden-mobile ">
-                <img src="images/banner_cns4.gif" width="800" alt="banner Image" />
+                <img src="images/banner_cns4-min.gif" width="800" alt="banner Image" />
                 <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
                 <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
                 <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
@@ -686,7 +686,7 @@
             <div class="doc-section" id="cooperation">
                 <h3>研究概览 <small><small><br class="display-mobile">「面向电网的氢-电协同低碳能源系统」</small></small></h3>
                 <br>
-                <img src="images/research_overview.png" style="width:100%;" alt="">
+                <img src="images/research_overview_min.png" style="width:100%;" alt="">
 
             </div>
 
@@ -1104,8 +1104,8 @@
             <div class="doc-section" id="cooperation">
                 <h3>学术合作<small><small> (2013-2024)</small></small></h3>
                 <br>
-                <img class="hidden-mobile" src="images/Cooperation.png" style="width:100%" alt="">
-                <img class="display-mobile" src="images/Cooperation_mobi.png" style="width:100%" alt="">
+                <img class="hidden-mobile" src="images/Cooperation_min.png" style="width:100%" alt="">
+                <img class="display-mobile" src="images/Cooperation_mobi_min.png" style="width:100%" alt="">
 
             </div>
 
@@ -1121,11 +1121,27 @@
 
                 <ol>
                     <li>
+                        <strong>H. Xu</strong>, 链接科技与社会: 不确定的未来, 重新构想的连接 <br>
+                        Connecting Technologies: Uncertain Futures, Connections Reimagined<br>
+                        <em>2024 | 韩国高等教育财团 - 萨尔茨堡全球研讨会</em>, 萨尔茨堡, 奥地利. <strong>[成员]</strong> [<a
+                            href="https://www.salzburgglobal.org/" target="_blank">链接</a>]
+                    </li>
+
+                    <li>
                         <strong>H. Xu</strong>, 联合国气候变化框架公约科学和技术咨询附属机构第六十届会议 <br>
                         Sixtieth session of the Subsidiary Body for Scientific and Technological Advice<br>
                         <em>2024 | 联合国波恩气候变化大会</em>, 波恩, 德国. <strong>[参会]</strong> [<a href="https://unfccc.int/sb58"
                             target="_blank">链接</a>]
                     </li>
+
+                    <li>
+                        <strong>H. Xu</strong>, 中国电信 - 低空经济新型基础设施建设与发展报告会 <br>
+                        China Telecom - Construction and Development of New Low-altitude Economic
+                        Infrastructure<br>
+                        <em>2024 | 低空经济发展大会</em>, 芜湖, 中国. <strong>[参会]</strong> [<a
+                            href="https://gxj.wuhu.gov.cn/xwzx/gzdt/8641460.html" target="_blank">链接</a>]
+                    </li>
+
                     <li>
                         <strong>H. Xu</strong>, 联合国欧洲经济委员会电动交通非正式工作小组首次会议<br>
                         First session of the UNECE Informal Task Force on E-mobility<br>
