--- a/cn-resume.html
+++ b/cn-resume.html
@@ -347,7 +347,7 @@
       <!--<img class="hidden-mobile" src="images/banner_cns2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile ">
-        <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
+        <img src="images/banner_cns5-min.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
 
       </div>
@@ -903,7 +903,7 @@
 
       <h3 class="hidden-mobile" style="display:inline-block">博士毕业典礼</h3>
       <div class="video-container hidden-mobile" style="padding-bottom: 48.25%">
-        <video controls poster="images/graduation_preview.png">
+        <video controls poster="images/graduation_preview_min.png">
           <source src="/images/Graduation_Ceremony_25MB.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
