--- a/cn.html
+++ b/cn.html
@@ -278,7 +278,7 @@
 
       <div class="image-wrapper hidden-mobile ">
         <div class="image-container">
-          <img src="images/banner_cns3.gif" alt="banner Image">
+          <img src="images/banner_cns3-min.gif" alt="banner Image">
           <div class="image-caption"></div>
         </div>
 
@@ -602,50 +602,50 @@
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg_cn.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg_cn_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg_cn.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg_cn_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg7_cn.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg7_cn_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg7_cn.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg7_cn_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg8_cn.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg8_cn_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg8_cn.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg8_cn_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg9_cn.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg9_cn_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg9_cn.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg9_cn_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg11_cn.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg11_cn_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg11_cn.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg11_cn_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg13_cn.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg13_cn_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg13_cn.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg13_cn_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
           <div class="mySlides fade">
             <div class="numbertext"></div>
-            <img class="hidden-mobile" src="images/sdg/slider_sdg14_cn.png" style="width:100%">
-            <img class="display-mobile" src="images/sdg/slider_sdg14_cn_mobi.png" style="width:100%">
+            <img class="hidden-mobile" src="images/sdg/slider_sdg14_cn.webp" style="width:100%">
+            <img class="display-mobile" src="images/sdg/slider_sdg14_cn_mobi.webp" style="width:100%">
             <div class="text"></div>
           </div>
 
