--- a/cn-activities.html
+++ b/cn-activities.html
@@ -1281,17 +1281,17 @@
 
             <div class="three-col-grid">
               <div class="grid-item">
-                <img src="images/sports/3.jpg" alt="Image 1" class="grid-image">
+                <img src="images/sports/3-min.webp" alt="Image 1" class="grid-image">
                 <div class="image-title"><span><img class="flag-icon" src="./images/wflags/ch.png" alt="Switzerland">
                     环苏黎世湖70km骑行</span></div>
               </div>
               <div class="grid-item">
-                <img src="images/sports/2.jpg" alt="Image 2" class="grid-image">
+                <img src="images/sports/2-min.webp" alt="Image 2" class="grid-image">
                 <div class="image-title"><img class="flag-icon" src="./images/wflags/hr.png" alt="Croatia"> 克罗地亚杜城Srđ山
                   (412m)</div>
               </div>
               <div class="grid-item">
-                <img src="images/sports/4.jpg" alt="Image 3" class="grid-image">
+                <img src="images/sports/4-min.webp" alt="Image 3" class="grid-image">
                 <div class="image-title"><img class="flag-icon" src="./images/wflags/de.png" alt="Germany"> 慕尼黑奥林匹克山
                   (565m)</div>
               </div>
@@ -1302,17 +1302,17 @@
             <strong>山区徒步</strong><br><br>
             <div class="three-col-grid">
               <div class="grid-item">
-                <img src="images/sports/6.jpg" alt="Image 1" class="grid-image">
+                <img src="images/sports/6-min.webp" alt="Image 1" class="grid-image">
                 <div class="image-title"><span><img class="flag-icon" src="./images/wflags/ch.png"
                       alt="Switzerland">布雷恩茨山脊线 (2350m) </span></div>
               </div>
               <div class="grid-item">
-                <img src="images/sports/7.jpg" alt="Image 2" class="grid-image">
+                <img src="images/sports/7-min.webp" alt="Image 2" class="grid-image">
                 <div class="image-title"><img class="flag-icon" src="./images/wflags/es.png" alt="Spain"> 马略卡岛/天涯海角灯塔
                   (384m)</div>
               </div>
               <div class="grid-item">
-                <img src="images/sports/9.jpg" alt="Image 3" class="grid-image">
+                <img src="images/sports/9-min.webp" alt="Image 3" class="grid-image">
                 <div class="image-title"><img class="flag-icon" src="./images/wflags/ch.png" alt="Switzerland"> 俯瞰阿莱奇冰川
                   (1905m)</div>
               </div>
@@ -1323,17 +1323,17 @@
             <strong>其他运动</strong><br><br>
             <div class="three-col-grid">
               <div class="grid-item">
-                <img src="images/sports/1.jpg" alt="Image 1" class="grid-image">
+                <img src="images/sports/1-min.webp" alt="Image 1" class="grid-image">
                 <div class="image-title"><span><img class="flag-icon" src="./images/wflags/ch.png"
                       alt="Switzerland">铁力士山冰屋搭建/夜宿 </span></div>
               </div>
               <div class="grid-item">
-                <img src="images/sports/10.jpg" alt="Image 2" class="grid-image">
+                <img src="images/sports/10-min.webp" alt="Image 2" class="grid-image">
                 <div class="image-title"><img class="flag-icon" src="./images/wflags/de.png" alt="Germany"> 慕尼黑啤酒节广场/攀岩
                 </div>
               </div>
               <div class="grid-item">
-                <img src="images/sports/11.jpg" alt="Image 3" class="grid-image">
+                <img src="images/sports/11-min.webp" alt="Image 3" class="grid-image">
                 <div class="image-title"><img class="flag-icon" src="./images/wflags/ch.png" alt="Switzerland">
                   瑞吉山/日落/堆雪人</div>
               </div>
