--- a/cn-activities.html
+++ b/cn-activities.html
@@ -671,7 +671,7 @@
                 - 北京大学 法学院 本科 <br>
                 - 外资律所 法律助理
               </p>
-              <p><span style="color:#102955"><strong>联席主持人: Helios Xu</strong></span> <br>
+              <p><span style="color:#102955"><strong>联席主持人: Dr. Helios Xu</strong></span> <br>
                 - 苏黎世联邦理工大学 (ETH) 博士 <br>
               </p>
 
