--- a/jp.html
+++ b/jp.html
@@ -514,10 +514,16 @@
       <p align="justify">
         <span class="display-mobile">ようこそ、<span id="location2">地球</span>からの友達 :-）</br></br></span>
 
-        現在、徐泓 (
+        現在、徐泓
+        (
         <script
           id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歲)
-        博士はドイツの産業界で<strong>新エネルギー動力システム</strong>の専門エンジニアとして、<strong>エネルギーと交通</strong>分野の<strong>炭素中和</strong>を実現するために活動しています。彼は<strong>国連ボン気候変動会議</strong>で「中国のエネルギー転換と技術革新」のセッションを主宰し、国連欧州経済委員会の交通と気候の<strong>専門家会議</strong>に参加しています。彼は学位取得中に国際企業や中欧の学術機関と協力して<strong>15以上の論文</strong>を発表し、<strong>300回以上引用</strong>され、<strong>3つの特許</strong>を取得しました。また、彼はエネルギーと交通の分野で7つの高い影響力のあるジャーナルの<strong>査読者</strong>を務め、<strong>スイス・サンクトガレン国際経済フォーラム</strong>の<strong>学術審査員</strong>も務めています。彼はアメリカ電気化学会の論文招待と旅行賞、インテル・エッジAI奨学金、欧州連合エラスムス奨学金、中国の"挑戦杯"起業全国銅賞などを受賞しています。
+        博士はドイツの産業界で<strong>新エネルギー動力システム</strong>の専門エンジニアとして働いており、<strong>エネルギーと交通</strong>分野の<strong>カーボンニュートラル</strong>の実現に取り組んでいます。学位取得中に多国籍企業や中欧の学術機関と協力して<strong>15本以上の論文</strong>を発表し、<strong>300回以上引用</strong>され、<strong>3つの特許</strong>を取得しました。<strong><a
+            href="https://unfccc.int/"
+            target="_blank">国連ボン気候変動会議</a></strong>で「中国の<strong>エネルギー転換</strong>と技術革新」をテーマにした分科会を主催し、<strong><a
+            href="https://unece.org/"
+            target="_blank">国連欧州経済委員会</a></strong>の<strong>交通と気候専門家グループ</strong>会議や<strong>水素エネルギー作業部会</strong>会議にも多く参加しました。また、エネルギーと交通分野の高引用率ジャーナルの<strong>査読者</strong>、スイスの<strong>サンクトガレン国際フォーラム</strong>の<strong>学術審査員</strong>、オーストリアの<strong>ザルツブルク国際シンポジウム</strong>の<strong>研究員</strong>も務めています。アメリカ電気化学会の論文招待および旅行賞、インテルエッジAI奨学金、EUエラスムス奨学金、「チャレンジカップ」全国起業銅賞などを受賞しています。
+
       </p>
 
       <p align="justify">
