--- a/kr.html
+++ b/kr.html
@@ -530,12 +530,14 @@
         현재, 쉬홍 (
         <script
           id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세)
-        박사는 독일 산업계에서 <strong>신 에너지 동력 시스템</strong> 전문 엔지니어로 활동하며, <strong>에너지와 교통</strong> 분야의 <strong>탄소 중립</strong>을
-        실현하기 위해 노력하고 있습니다. 그는 <strong>유엔 본 클라이메트 변화 컨퍼런스</strong>에서 "중국의 에너지 전환과 기술 혁신" 주제의 세션을 주관하고, 유엔 유럽 경제위원회의 교통과
-        기후 <strong>전문가 그룹 회의</strong>에 참여했습니다. 그는 학위 과정 중에 국제 기업 및 중유럽 학술 기관과 협력하여 <strong>15편 이상의 논문</strong>을 발표하고,
-        <strong>300회 이상 인용</strong>되었으며, <strong>3개의 특허</strong>를 획득했습니다. 또한 그는 에너지와 교통 분야에서 7개의 고 영향력 저널의
-        <strong>심사위원</strong>을 맡고 있으며, <strong>스위스 성갈렌 국제 경제 포럼</strong>의 <strong>학술 심사위원</strong>도 맡고 있습니다. 그는 미국 전기화학회
-        논문 초대 및 여행상, 인텔 엣지 AI 장학금, 유럽연합 에라스무스 장학금, 중국 "도전컵" 창업 국가 동상 등을 수상했습니다.
+        박사는 독일 산업계에서 <strong>신에너지 동력 시스템</strong> 전문가 엔지니어로 일하고 있으며, <strong>에너지와 교통</strong> 분야의 <strong>탄소 중립</strong>
+        실현에 전념하고 있습니다. 학위 취득 중 다국적 기업 및 중유럽 학술 기관과 협력하여 <strong>15편 이상의 논문</strong>을 발표하고, <strong>300회 이상
+          인용</strong>되었으며, <strong>3건의 특허</strong>를 획득했습니다. <strong><a href="https://unfccc.int/" target="_blank">유엔 본
+            기후 변화 회의</a></strong>에서 "중국의 <strong>에너지 전환</strong>과 기술 혁신" 주제 세션을 주최하고, <strong><a
+            href="https://unece.org/" target="_blank">유엔 유럽 경제 위원회</a></strong>의 <strong>교통 및 기후 전문가 그룹</strong> 회의와
+        <strong>수소 에너지 작업 그룹</strong> 회의에 여러 차례 참여했습니다. 또한 에너지와 교통 분야의 고인용 저널의 <strong>심사위원</strong>, 스위스 <strong>세인트갈렌
+          국제 포럼</strong>의 <strong>학술 심사위원</strong>, 오스트리아 <strong>잘츠부르크 국제 심포지엄</strong>의 <strong>연구원</strong>으로도 활동하고
+        있습니다. 미국 전기화학회 논문 초청 및 여행 상, 인텔 엣지 AI 장학금, EU 에라스무스 장학금, "챌린지 컵" 창업 전국 동상 등을 수상했습니다.
       </p>
 
       <p align="justify">
