--- a/ar.html
+++ b/ar.html
@@ -510,7 +510,7 @@
         </span>
       </p>
 
-      <p align="justify" style="text-align: right;">
+      <p align="justify">
 
         <br class="display-mobile">
         <span class="display-mobile" style="text-align: left;">مرحبًا، أصدقاء من <span
