--- a/cn-research.html
+++ b/cn-research.html
@@ -296,8 +296,8 @@
                     <img class="hidden-mobile" src="images/banner_cns4_left.gif" width="155" />
                     <div style="margin-bottom: 15px;"></div>
                     <h3 class="hidden-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text>
-                            </rt></ruby>
-                        <ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby> <small><ruby>博 士<rt>科学 /
+                            </rt></ruby>&nbsp;<ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby>
+                        <small><ruby>博 士<rt>科学 /
                                     Dr.</rt>
                             </ruby></small>
                     </h3>
