--- a/kr-resume.html
+++ b/kr-resume.html
@@ -603,6 +603,14 @@
       <div class="doc-section" id="academic-services">
         <h3>학술 활동</h3>
         <ul class="square">
+          <li><strong>국제 조직/싱크탱크: </strong><br>
+            - <strong>한국고등교육재단-잘츠부르크 글로벌 세미나: KFAS-Salzburg</strong>, 펠로우/연구원 (KFAS-SGS, 2024-2025)<br>
+            - <strong>유엔 본 기후 변화 회의: 분과 회의 사회자</strong>, 청년 대표/연설자 (UNFCCC, 2023-2024)<br>
+            - <strong>유엔 유럽 경제 위원회: 기후 변화와 육상 교통</strong> 전문가 그룹 멤버/내부 컨설턴트 (UNECE, 2023-2024)<br>
+            - <strong>스위스 생갈렌 국제 경제 포럼: </strong> 학술 심사위원 (St. Gallen Symposium, 2023-2024)<br>
+            - <strong>유엔 유럽 경제 위원회: 지속 가능한 에너지(수소 에너지) </strong> 작업 그룹 멤버 (UNECE, 2024)<br>
+            - <strong>유엔 유럽 경제 위원회: 전기 교통</strong> 작업 그룹 멤버 (UNECE, 2024)<br>
+            <hr>
           <li><strong>심사위원 (40편 이상): </strong><br>
             - <strong>에너지 변환 및 관리 저널</strong> (Energy Conversion & Management, 영향력 지수: 11.2, 2021) <br>
             - <strong>응용 에너지 저널</strong> (Applied Energy, 영향력 지수: 11.4, 2022)<br>
