--- a/jp-resume.html
+++ b/jp-resume.html
@@ -534,12 +534,14 @@
       <div class="doc-section" id="academic-services">
         <h3>学術職能</h3>
         <ul class="square">
-          <!-- <li><strong>国際機関: </strong><br> -->
-          <!-- - <strong>UNECE-ITC-E-MobilityTaskForce</strong> 会議メンバー (UNECE-ITC-E-MobilityTaskForce, 2024)<br> -->
-          <!-- - <strong>UNECE-CSE-H2TaskForce</strong> 会議メンバー (UNECE-CSE-H2TaskForce, 2024)<br>
-            - <strong>UNFCCC</strong> 若手代表/セクションホスト/スピーカー (UNFCCC, 2023)<br>
-            - <strong>UNECE-ITC-GE3</strong> 専門家グループメンバー (UNECE-ITC-GE3, 2023)<br>
-            <hr> -->
+          <li><strong>国際組織/シンクタンク: </strong><br>
+            - <strong>ザルツブルク・グローバル・セミナー: KFAS-Salzburg</strong>, フェロー/研究員 (KFAS-SGS, 2024-2025)<br>
+            - <strong>国連ボン気候変動会議: 分会司会者</strong>, 青年代表/スピーカー (UNFCCC, 2023-2024)<br>
+            - <strong>国連欧州経済委員会: 気候変動と陸上交通</strong> 専門家グループメンバー (UNECE, 2023-2024)<br>
+            - <strong>スイス・サンクトガレン国際経済フォーラム: </strong> 学術審査員 (St. Gallen Symposium, 2023-2024)<br>
+            - <strong>国連欧州経済委員会: 持続可能なエネルギー(水素エネルギー) </strong> 作業部会メンバー (UNECE, 2024)<br>
+            - <strong>国連欧州経済委員会: 電動交通</strong> 作業部会メンバー (UNECE, 2024)<br>
+            <hr>
           <li><strong>査読者 (40+回): </strong><br>
             - <strong>エネルギー変換と管理</strong> (Energy Conversion & Management, インパクトファクター: 11.2, 2021) <br>
             - <strong>応用エネルギー</strong> (Applied Energy, IF: 11.4, 2022)<br>
