--- a/cn-resume.html
+++ b/cn-resume.html
@@ -861,8 +861,12 @@
         <h3>荣誉奖励</h3>
         <ul class="square">
           <li>
+            2024 | <strong>KFAS-Salzburg研讨会旅行奖</strong>,
+            <em>韩国高等教育财团 (KFAS)</em>, 韩国.
+          </li>
+          <li>
             2023 | <strong>桑坦德银行奖学金</strong>,
-            <em></em>绿色转型项目-剑桥大学嘉治商学院, 英国.
+            <em>绿色转型项目-剑桥大学嘉治商学院</em>, 英国.
           </li>
           <li>
             2021 | <strong>PSI研究成果高亮展示</strong> [<a
